--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -55,7 +54,7 @@
     <h2>قم بكتابة الرمز السري</h2>
     <input type="text" id="passwordInput" placeholder="أدخل الرمز السري" />
     <div id="passwordError" class="error"></div>
-    <button onclick="checkPassword()">دخول</button>
+    <button id="nextBtn" disabled>التالي</button>
   </div>
 
   <!-- الصفحة 2: توكن ديسكورد -->
@@ -79,26 +78,35 @@
   </div>
 
 <script>
-  let intervalId = null;
-  let token = '';
-  let channelId = '';
-  let messageText = '';
+  const passwordInput = document.getElementById('passwordInput');
+  const nextBtn = document.getElementById('nextBtn');
+  const passwordError = document.getElementById('passwordError');
 
-  function checkPassword() {
-    const pass = document.getElementById('passwordInput').value.trim();
-    if (pass === '497') {
-      document.getElementById('passwordError').textContent = '';
+  // تفعيل زر التالي فقط إذا كان النص "497"
+  passwordInput.addEventListener('input', () => {
+    if (passwordInput.value.trim() === '497') {
+      nextBtn.disabled = false;
+      passwordError.textContent = '';
+    } else {
+      nextBtn.disabled = true;
+      if(passwordInput.value.trim() !== '') {
+        passwordError.textContent = 'الرمز السري غير صحيح';
+      } else {
+        passwordError.textContent = '';
+      }
+    }
+  });
+
+  nextBtn.addEventListener('click', () => {
+    if(passwordInput.value.trim() === '497') {
       showPage(2);
     } else {
-      document.getElementById('passwordError').textContent = 'رمز سري خاطئ. سيتم إعادة التوجيه.';
-      setTimeout(() => {
-        window.location.href = 'https://www.google.com'; // ممكن تغير حسب ما تحب
-      }, 2000);
+      passwordError.textContent = 'رمز سري خاطئ';
     }
-  }
+  });
 
   function checkToken() {
-    token = document.getElementById('tokenInput').value.trim();
+    const token = document.getElementById('tokenInput').value.trim();
     if (token.length === 0) {
       document.getElementById('tokenError').textContent = 'الرجاء إدخال التوكن';
       return;
@@ -118,8 +126,8 @@
   }
 
   async function sendMessage() {
-    channelId = document.getElementById('channelIdInput').value.trim();
-    messageText = document.getElementById('messageInput').value.trim();
+    const channelId = document.getElementById('channelIdInput').value.trim();
+    const messageText = document.getElementById('messageInput').value.trim();
     if (!channelId || !messageText) {
       document.getElementById('sendStatus').textContent = 'الرجاء إدخال معرف الروم والرسالة.';
       return;
@@ -144,6 +152,8 @@
       document.getElementById('sendStatus').textContent = 'حدث خطأ أثناء الإرسال.';
     }
   }
+
+  let intervalId = null;
 
   function startSending() {
     if (intervalId !== null) return;
